<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_login_main">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_Register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log In</string>
    <string name="prompt_username">Username</string>
    <string name="invalid_email">Email is Invalid</string>
    <string name="todo">TODO</string>
    <string name="title_activity_scrolling_project">Movies</string>
    <string name="large_text">TODO</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="my_collections">My Collections</string>
    <string name="logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="descr_overflow_button">list</string>
    <string name="movie">Movie</string>
    <string name="add">Add</string>
    <string name="movie_select">Movie name</string>
    <string name="rating">Rating</string>
    <string name="datewatched">DateWatched</string>
    <string name="this_is_a_popup_window">This is a popup window.</string>
    <string name="watching">Watching</string>
    <string name="plan_to_watch">Plan To Watch</string>
    <string name="completed">Completed</string>
    <string name="rewatching">Rewatching</string>
    <string name="paused">Paused</string>
    <string name="dropped">Dropped</string>
    <string name="nav_header_title">Nav_Movie</string>
    <string name="nav_header_subtitle">Hello</string>
    <string name="remove">Remove</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movies">Movies</string>
    <string name="backlogs">Backlogs</string>
</resources>